# juice

./: .dependency-cruiser.cjs  .eslintrc.cjs  .gitignore  .mise.toml  CHANGELOG.md  README.md  components.json  electron-builder.yml  electron.vite.config.ts  knip.json  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  tsconfig.json  tsconfig.web.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: tauri-migration.md
front/: entry.ts
front/shared/: ipc.ts  sessionUtils.ts  version.test.ts  version.ts
frontend/: bridge.ts  entry.ts  index.html
frontend/shared/: ipc.ts  types.ts
lambda/: README.md  package-lock.json  package.json  template.yaml  tsconfig.json
lambda/src/: attendanceSend.test.ts  attendanceSend.ts  handler.test.ts  handler.ts  http.ts  revocations.test.ts  revocations.ts  secrets.test.ts  secrets.ts  sessionJwt.test.ts  sessionJwt.ts  slackOidc.test.ts  slackOidc.ts  slackPost.test.ts  slackPost.ts  stateSign.test.ts  stateSign.ts  whiteboardPost.test.ts  whiteboardPost.ts
lambda/terraform/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
poc/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
poc/front/: electron-api-shim.ts  entry.ts  index.html
poc/src-tauri/: Cargo.toml  tauri.conf.json
resources/: icon.icns
scripts/: ensure-electron.mjs
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  commands.rs  config.rs  daily_store.rs  holidays.rs  integrations.rs  lib.rs  main.rs  notif_scheduler.rs  notifications.rs  oauth.rs  session_store.rs  settings_store.rs  types.rs  update.rs
src/main/: dailyStore.test.ts  env.d.ts  (+10 more)
(+278 files in other folders)
